// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`++++ <Error /> ++++ Renders correctly with different props 1`] = `
<div
  className="errorContainer"
>
  <div
    className="errorIcon"
  >
    <ErrorIcon
      height="70"
      svgClass="error-icon"
      viewBox="0 0 512 512"
      width="70"
    />
  </div>
  <WithStyles(ForwardRef(Typography))
    align="center"
    color="error"
    variant="h4"
  >
    First example text
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`++++ <Error /> ++++ Renders correctly with different props 2`] = `
<div
  className="errorContainer"
>
  <div
    className="errorIcon"
  >
    <ErrorIcon
      height="70"
      svgClass="error-icon"
      viewBox="0 0 512 512"
      width="70"
    />
  </div>
  <WithStyles(ForwardRef(Typography))
    align="center"
    color="error"
    variant="h4"
  >
    Second example text
  </WithStyles(ForwardRef(Typography))>
</div>
`;
